--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.19.2",
     "components": "^0.1.0",
+    "immer": "^5.3.2",
     "polished": "^3.4.4",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
@@ -12,6 +13,8 @@
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
+    "reactotron-react-js": "^3.3.7",
+    "reactotron-redux": "^3.1.2",
     "redux": "^4.0.5",
     "styled": "^1.0.0",
     "styled-components": "^4.4.1"
