--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
+    "react-toastify": "^5.5.0",
     "reactotron-react-js": "^3.3.7",
     "reactotron-redux": "^3.1.2",
+    "reactotron-redux-saga": "^4.2.3",
     "redux": "^4.0.5",
+    "redux-saga": "^1.1.3",
     "styled": "^1.0.0",
     "styled-components": "^4.4.1"
   },
